# qhttpserver

./: .travis.yml  CMakeLists.txt  README.md
share/: QHttpServerConfig.cmake  libqhttpserver.pc
